force-app/main/default/objects/Grant__c/fields/A_133_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>A_133_Audit_Status__c</fullName>
    <label>A-133 Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>