force-app/main/default/objects/Grant__c/fields/Account_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_City_State_Zip__c</fullName>
    <formula
  >Account__r.BillingCity &amp;&quot;, &quot;&amp; Account__r.BillingState &amp;&quot; &quot;&amp; Account__r.BillingPostalCode</formula>
    <label>Account City, State, Zip</label>
    <type>Text</type>
</CustomField>