force-app/main/default/objects/Grant__c/fields/Account_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Account_QuickBooks__c</fullName>
    <label>Account QuickBooks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70103 (federal)</fullName>
            </value>
            <value>
                <fullName>70150 (YDPGF)</fullName>
            </value>
            <value>
                <fullName>70113 (all other – state or private)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>