force-app/main/default/objects/Grant__c/fields/Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted__c</fullName>
    <formula
  >Account__r.BillingCity &amp;  &apos;, &apos;  &amp; Account__r.BillingState &amp; &apos; &apos; &amp; Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Formatted</label>
    <type>Text</type>
</CustomField>