force-app/main/default/objects/Grant__c/fields/Allow_Budget_to_Exceed_Award__c.field-meta.xml
<CustomField>
    <fullName>Allow_Budget_to_Exceed_Award__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Budget to Exceed Award</label>
    <type>Checkbox</type>
</CustomField>