force-app/main/default/objects/Grant__c/fields/American_Indian_Alaska_Native__c.field-meta.xml
<CustomField>
    <fullName>American_Indian_Alaska_Native__c</fullName>
    <label>American Indian/Alaska Native (AI/AN)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>