force-app/main/default/objects/Grant__c/fields/Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Amount_Text__c</fullName>
    <description>Converts Amount field to text for LOA pull-in.</description>
    <formula>IF( 
  Amount__c &gt;= 1000000, 
  TEXT(FLOOR(Amount__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Amount__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Amount__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Amount__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Amount__c , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Text</label>
    <type>Text</type>
</CustomField>