force-app/main/default/objects/Grant__c/fields/Apply_Indirect_Rate_to_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Apply_Indirect_Rate_to_Expenses__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Apply Indirect Rate to Expenses</label>
    <type>Checkbox</type>
</CustomField>