force-app/main/default/objects/Grant__c/fields/Approved_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approved_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Email Sent</label>
    <type>Checkbox</type>
</CustomField>