force-app/main/default/objects/Grant__c/fields/Approved_Not_Equal_To_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Not_Equal_To_Requested_Amount__c</fullName>
    <formula
  >Reimbursement_Requested_Amount__c != Reimbursement_Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Not Equal To Requested Amount</label>
    <type>Checkbox</type>
</CustomField>