force-app/main/default/objects/Grant__c/fields/At_Risk_High_Risk_Youth__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_High_Risk_Youth__c</fullName>
    <label>At-Risk &amp; High Risk Youth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>