force-app/main/default/objects/Grant__c/fields/Awarded_Amount_Minus_Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Amount_Minus_Budgeted_Amount__c</fullName>
    <formula>Amount__c - Total_Budgeted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount__c - Total_Budgeted__c</inlineHelpText>
    <label>Awarded Amount Minus Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>