force-app/main/default/objects/Grant__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>IF(Allow_Budget_to_Exceed_Award__c = true,
Amount__c - Reimbursement_Approved_Amount__c, Total_Budgeted__c - Reimbursement_Approved_Amount__c)</description>
    <formula>IF(National_Grant__r.Allow_Budget_to_Exceed_Award__c = true,
Amount__c - Reimbursement_Approved_Amount__c, Total_Budgeted__c - Reimbursement_Approved_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>