force-app/main/default/objects/Grant__c/fields/BBBS_Grant_ID__c.field-meta.xml
<CustomField>
    <fullName>BBBS_Grant_ID__c</fullName>
    <label>BBBS Grant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>