force-app/main/default/objects/Grant__c/fields/Behavioral_Health__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral Health</label>
    <type>Checkbox</type>
</CustomField>