force-app/main/default/objects/Grant__c/fields/Benefits_Balance__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Balance__c</fullName>
    <formula>Total_Fringe_Benefits__c - Total_Benefits_Reimbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total_Fringe_Benefits__c - Total_Benefits_Reimbursed__c</inlineHelpText>
    <label>Benefits Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>