force-app/main/default/objects/Grant__c/fields/Bigs_in_Blue__c.field-meta.xml
<CustomField>
    <fullName>Bigs_in_Blue__c</fullName>
    <label>Bigs in Blue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>