force-app/main/default/objects/Grant__c/fields/Breakdown_of_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_of_Expenses__c</fullName>
    <label>Breakdown of Expenses</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>