force-app/main/default/objects/Grant__c/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <label>Budget Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>