force-app/main/default/objects/Grant__c/fields/Catalog_of_Federal_Domestic_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Catalog_of_Federal_Domestic_Assistance__c</fullName>
    <label>Catalog of Federal Domestic Assistance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>