force-app/main/default/objects/Grant__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grants (CEO)</relationshipLabel>
    <relationshipName>CEOGrants</relationshipName>
    <type>Lookup</type>
</CustomField>