force-app/main/default/objects/Grant__c/fields/CEO_Email_text__c.field-meta.xml
<CustomField>
    <fullName>CEO_Email_text__c</fullName>
    <formula>Account__r.CEO_Email_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO Email (formula field)</label>
    <type>Text</type>
</CustomField>