force-app/main/default/objects/Grant__c/fields/CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name__c</fullName>
    <formula>Account__r.CEO_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO Name</label>
    <type>Text</type>
</CustomField>