force-app/main/default/objects/Grant__c/fields/CEO_Title__c.field-meta.xml
<CustomField>
    <fullName>CEO_Title__c</fullName>
    <formula>Account__r.CEO_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO Title</label>
    <type>Text</type>
</CustomField>