force-app/main/default/objects/Grant__c/fields/Children_of_Active_Duty_Military_Parents__c.field-meta.xml
<CustomField>
    <fullName>Children_of_Active_Duty_Military_Parents__c</fullName>
    <label>Children of Active Duty Military Parents</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>