force-app/main/default/objects/Grant__c/fields/Children_of_Incarcerated_Parents__c.field-meta.xml
<CustomField>
    <fullName>Children_of_Incarcerated_Parents__c</fullName>
    <label>Children of Incarcerated Parents (COIP)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>