force-app/main/default/objects/Grant__c/fields/Class_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Class_QuickBooks__c</fullName>
    <label>Class QuickBooks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal Grant COPS: 2020-2021 COPS</fullName>
            </value>
            <value>
                <fullName
        >Federal Grant HIDTA: 2021 Washington/Baltimore HIDTA</fullName>
                <label
        >Federal Grant HIDTA: 2021 Washington/Baltimore HIDTA</label>
            </value>
            <value>
                <fullName
        >Federal Grant - OJJDP: 2020-2021 Mentoring Grant</fullName>
                <label>Federal Grant - OJJDP: 2020-2021 Mentoring Grant</label>
            </value>
            <value>
                <fullName>Private Grants: BGE 2021</fullName>
            </value>
            <value>
                <fullName>Private Grants: Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName
        >Private Grants: Charles T. Bauer Charitable Fdn 2021</fullName>
                <label
        >Private Grants: Charles T. Bauer Charitable Fdn 2021</label>
            </value>
            <value>
                <fullName>Private Grants: Niagara Cares 2021</fullName>
            </value>
            <value>
                <fullName>Private Grants: PNC 2021</fullName>
            </value>
            <value>
                <fullName>Private Grants: Sherman Fairchild Fdn 2021</fullName>
            </value>
            <value>
                <fullName>Private Grants: Toledo Community Fdn 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>