force-app/main/default/objects/Grant__c/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <label>Compliance Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>