force-app/main/default/objects/Grant__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <formula>IF(ISBLANK(Grant_Start_Date__c), 
TEXT(MONTH(Start_Date__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(Start_Date__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Start_Date__c)), 
TEXT(MONTH(Grant_Start_Date__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(Grant_Start_Date__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Grant_Start_Date__c))) 
&amp; &apos; - &apos; &amp; 
IF(ISBLANK(Grant_End_Date__c), 
TEXT(MONTH(End_Date__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(End_Date__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(End_Date__c)), 
TEXT(MONTH(Grant_End_Date__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(Grant_End_Date__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Grant_End_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Range</label>
    <type>Text</type>
</CustomField>