force-app/main/default/objects/Grant__c/fields/DOD_Email__c.field-meta.xml
<CustomField>
    <fullName>DOD_Email__c</fullName>
    <label>DOD Email</label>
    <type>Email</type>
</CustomField>