force-app/main/default/objects/Grant__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <formula>TEXT(Account__r.DUNS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUNS Number</label>
    <type>Text</type>
</CustomField>