force-app/main/default/objects/Grant__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(ISBLANK(Start_Date__c),
Grant_End_Date__c - Grant_Start_Date__c + 1,
End_Date__c - Start_Date__c + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>