force-app/main/default/objects/Grant__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <formula>Account__r.EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIN</label>
    <type>Text</type>
</CustomField>