force-app/main/default/objects/Grant__c/fields/End_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Formatted__c</fullName>
    <formula>IF(ISBLANK(Grant_End_Date__c), 
CASE(MONTH(End_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;,&apos;&apos;) &amp; &apos; &apos; &amp; TEXT(DAY(End_Date__c)) &amp; &apos;, &apos; &amp; TEXT(YEAR(End_Date__c)), 
CASE(MONTH(Grant_End_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &apos;&apos;) &amp; &apos; &apos; &amp; TEXT(DAY(Grant_End_Date__c)) &amp; &apos;, &apos; &amp; TEXT(YEAR(Grant_End_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Formatted</label>
    <type>Text</type>
</CustomField>