force-app/main/default/objects/Grant__c/fields/Equipment_and_Materials_Value__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Materials_Value__c</fullName>
    <label>Equipment and Materials Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>