force-app/main/default/objects/Grant__c/fields/Equipment_and_Materials_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Materials_Value_Text__c</fullName>
    <formula>IF( 
Equipment_and_Materials_Value__c &gt;= 1000000, 
TEXT(FLOOR(Equipment_and_Materials_Value__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Equipment_and_Materials_Value__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Equipment_and_Materials_Value__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Equipment_and_Materials_Value__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Equipment_and_Materials_Value__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Equipment_and_Materials_Value__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Equipment_and_Materials_Value__c , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment and Materials Value Text</label>
    <type>Text</type>
</CustomField>