force-app/main/default/objects/Grant__c/fields/Estimated_FTE__c.field-meta.xml
<CustomField>
    <fullName>Estimated_FTE__c</fullName>
    <label>Estimated FTE</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>