force-app/main/default/objects/Grant__c/fields/Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>Expense_Balance__c</fullName>
    <formula
  >Total_Expense_Item_Budget__c - Total_Expenses_Reimbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total_Expense_Item_Budget__c - Total_Expenses_Reimbursed__c</inlineHelpText>
    <label>Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>