force-app/main/default/objects/Grant__c/fields/Expense_Response__c.field-meta.xml
<CustomField>
    <fullName>Expense_Response__c</fullName>
    <label>Expense Response</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>