force-app/main/default/objects/Grant__c/fields/FP_Report_Grant_ID__c.field-meta.xml
<CustomField>
    <fullName>FP_Report_Grant_ID__c</fullName>
    <inlineHelpText
  >FP assigned (sub-)grant ID # for easier report ordering.</inlineHelpText>
    <label>FP Report Grant ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>