force-app/main/default/objects/Grant__c/fields/FT_Federal_Grants__c.field-meta.xml
<CustomField>
    <fullName>FT_Federal_Grants__c</fullName>
    <label>FT: Federal Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>