force-app/main/default/objects/Grant__c/fields/FT_Private__c.field-meta.xml
<CustomField>
    <fullName>FT_Private__c</fullName>
    <label>FT: Private</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>