force-app/main/default/objects/Grant__c/fields/FT_State_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>FT_State_Initiatives__c</fullName>
    <label>FT: State Initiatives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>