force-app/main/default/objects/Grant__c/fields/FTE_at_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>FTE_at_Affiliate__c</fullName>
    <label>FTE at Affiliate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>