force-app/main/default/objects/Grant__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <formula
  >IF(FT_Federal_Grants__c &gt; 0, &apos;Federal Grants&apos;, &apos;&apos;) + 
IF(AND(FT_Federal_Grants__c &gt; 0, FT_Private__c &gt; 0), &apos;, &apos;, &apos;&apos;) + 
IF(FT_Private__c &gt; 0, &apos;Private&apos;, &apos;&apos;) + 
IF(AND(FT_Private__c &gt; 0, FT_State_Initiatives__c &gt; 0), &apos;, &apos;, &apos;&apos;) + 
IF(AND(FT_Federal_Grants__c &gt; 0, FT_Private__c = 0, FT_State_Initiatives__c &gt; 0), &apos;, &apos;, &apos;&apos;) + 
IF(FT_State_Initiatives__c &gt; 0, &apos;State Initiatives&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Source</label>
    <type>Text</type>
</CustomField>