force-app/main/default/objects/Grant__c/fields/Grant_Code__c.field-meta.xml
<CustomField>
    <fullName>Grant_Code__c</fullName>
    <formula>LEFT(Name, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Code</label>
    <type>Text</type>
</CustomField>