force-app/main/default/objects/Grant__c/fields/Grant_Duration__c.field-meta.xml
<CustomField>
    <fullName>Grant_Duration__c</fullName>
    <formula>National_Grant__r.Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>