force-app/main/default/objects/Grant__c/fields/Grant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_End_Date__c</fullName>
    <formula>National_Grant__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant End Date</label>
    <type>Date</type>
</CustomField>