force-app/main/default/objects/Grant__c/fields/Grant_Indirect_Rate_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Grant_Indirect_Rate_Allowed__c</fullName>
    <formula>National_Grant__r.Indirect_Rate_Allowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Indirect Rate Allowed</label>
    <type>Checkbox</type>
</CustomField>