force-app/main/default/objects/Grant__c/fields/Grant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Start_Date__c</fullName>
    <formula>National_Grant__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Start Date</label>
    <type>Date</type>
</CustomField>