force-app/main/default/objects/Grant__c/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <label>Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Application In Review</fullName>
            </value>
            <value>
                <fullName>LOA Submitted</fullName>
            </value>
            <value>
                <fullName>Budget Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending First Approval</fullName>
            </value>
            <value>
                <fullName>Pending Second Approval</fullName>
            </value>
            <value>
                <fullName>Pending Third Approval</fullName>
            </value>
            <value>
                <fullName>Pending Fourth Approval</fullName>
            </value>
            <value>
                <fullName>Pending Final Approval</fullName>
            </value>
            <value>
                <fullName>Revisions Needed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>