force-app/main/default/objects/Grant__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Badges for Baseball</fullName>
            </value>
            <value>
                <fullName>Special Initiative</fullName>
            </value>
            <value>
                <fullName>I&apos;m GREAT</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>Healthy Lifestyles</fullName>
            </value>
            <value>
                <fullName>TRAIL</fullName>
            </value>
            <value>
                <fullName>OVC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>