force-app/main/default/objects/Grant__c/fields/Hide_from_Local__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide from Local</label>
    <type>Checkbox</type>
</CustomField>