force-app/main/default/objects/Grant__c/fields/Indirect_Costs_Balance__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Costs_Balance__c</fullName>
    <formula
  >Total_Indirect_Rate_Budgeted__c -  Reimbursement_Approved_Indirect_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirect Costs Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>