force-app/main/default/objects/Grant__c/fields/Indirect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Indirect Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>