force-app/main/default/objects/Grant__c/fields/Indirect_Rate_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect Rate Allowed</label>
    <type>Checkbox</type>
</CustomField>