force-app/main/default/objects/Grant__c/fields/Indirect_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate_Cap__c</fullName>
    <label>Indirect Rate Cap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>