force-app/main/default/objects/Grant__c/fields/Is_STEM_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_STEM_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is STEM Program</label>
    <type>Checkbox</type>
</CustomField>