force-app/main/default/objects/Grant__c/fields/Labor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Labor_Notes__c</fullName>
    <label>Labor Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>