force-app/main/default/objects/Grant__c/fields/Labor_Response__c.field-meta.xml
<CustomField>
    <fullName>Labor_Response__c</fullName>
    <label>Labor Response</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>