force-app/main/default/objects/Grant__c/fields/Law_Enforcement_Representatives__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Representatives__c</fullName>
    <label>Law Enforcement Representatives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>