force-app/main/default/objects/Grant__c/fields/LGBTQ__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ__c</fullName>
    <label>LGBTQ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>