force-app/main/default/objects/Grant__c/fields/LOA_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Submitted_Date__c</fullName>
    <label>LOA Submitted Date</label>
    <type>Date</type>
</CustomField>