force-app/main/default/objects/Grant__c/fields/Mentors_Required__c.field-meta.xml
<CustomField>
    <fullName>Mentors_Required__c</fullName>
    <label>Mentors Required</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>