force-app/main/default/objects/Grant__c/fields/Names_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Sites__c</fullName>
    <label>Names of Sites</label>
    <type>TextArea</type>
</CustomField>