force-app/main/default/objects/Grant__c/fields/National_Grant__c.field-meta.xml
<CustomField>
    <fullName>National_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Grant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Grant__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Grant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Sub-Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>