force-app/main/default/objects/Grant__c/fields/National_Grant_Indirect_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Indirect_Rate_Cap__c</fullName>
    <formula>National_Grant__r.Indirect_Rate_Cap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Indirect Rate Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>