force-app/main/default/objects/Grant__c/fields/National_Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Name__c</fullName>
    <formula>National_Grant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Name</label>
    <type>Text</type>
</CustomField>