force-app/main/default/objects/Grant__c/fields/National_Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Number__c</fullName>
    <label>National Grant Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>